# yxo-rp

./: Cargo.toml  LICENSE.md  README.md
crates/adapters/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/yxo/: aggregate.rs  commands.rs  errors.rs  events.rs  mod.rs  services.rs
crates/ports/: Cargo.toml
crates/ports/src/: cache.rs  common.rs  edge.rs  hasher.rs  lib.rs  origin.rs
