[package]
name = "yxo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.0"
thiserror = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1.21", features = ["sync", "macros", "rt-multi-thread"] }
flume = "0.10.14"
cqrs-es = "0.4.5"
yxo-ports = { path = "../ports" }
